--- a/index.qmd
+++ b/index.qmd
@@ -151,6 +151,7 @@ source:<https://education.rstudio.com/blog/2020/07/teaching-the-tidyverse-in-202
 
 These content were adapted from the following course materials:
 
+ - [R for Data Science book](https://r4ds.had.co.nz/index.html)
  - [OHI Data Science Training](http://ohi-science.org/data-science-training/index.html)
  - [Data Carpentry](https://datacarpentry.org)
  - [WEHI tidyr coursebook](https://bookdown.org/ansellbr/WEHI_tidyR_course_book/) by Brendan R. E. Ansell
