--- a/vignettes/4_Visualization.qmd
+++ b/vignettes/4_Visualization.qmd
@@ -1613,9 +1613,12 @@ Integrative cluster breast cancer subtypes.
 # categorical variable with the levels in the correct order, and select just
 # the columns and rows we're going to use
 metabric <- metabric |> 
-  mutate(INTCLUST = factor(INTCLUST, levels = c("1", "2", "3", "4ER-", "4ER+", "5", "6", "7", "8", "9", "10"))) |> 
-  mutate(THREEGENE = replace_na(THREEGENE, "Unclassified")) |> 
-  select(PATIENT_ID, ER_IHC, PR_STATUS, THREEGENE, INTCLUST, ESR1) %>%
+  mutate(INTCLUST = 
+           factor(INTCLUST, 
+                  levels = c("1", "2", "3", "4ER-", "4ER+", "5", "6", "7", "8", "9", "10"))) |> 
+  mutate(THREEGENE = 
+           replace_na(THREEGENE, "Unclassified")) |> 
+  select(PATIENT_ID, ER_IHC, PR_STATUS, THREEGENE, INTCLUST, ESR1) |> 
   filter(!is.na(INTCLUST), !is.na(ESR1))
 ```
 
@@ -1658,7 +1661,10 @@ colours.
 ```{r}
 metabric |> ggplot() +
   geom_bar(aes(x = THREEGENE, fill = ER_IHC)) +
-  scale_y_continuous(limits = c(0, 700), breaks = seq(0, 700, 100), expand = expand_scale(mult = 0)) +
+  scale_y_continuous(
+    limits = c(0, 700), 
+    breaks = seq(0, 700, 100), 
+    expand = expansion(mult = 0)) +
   scale_fill_manual(values = c("firebrick2", "dodgerblue2")) +
   labs(x = NULL, y = "samples", fill = "ER status") +
   theme_bw() +
@@ -1683,7 +1689,11 @@ metabric |>
   filter(THREEGENE == "HER2+") |> 
   ggplot(aes(x = PR_STATUS, y = ESR1)) +
   geom_boxplot() +
-  geom_jitter(aes(colour = PR_STATUS), width = 0.25, alpha = 0.4, show.legend = FALSE) +
+  geom_jitter(
+    aes(colour = PR_STATUS), 
+    width = 0.25, 
+    alpha = 0.4, 
+    show.legend = FALSE) +
   scale_colour_brewer(palette = "Set1") +
   labs(x = "PR status", y = "ESR1 expression") +
   theme_gdocs()
@@ -1705,7 +1715,7 @@ data would be to show separate bars for each ER status side-by-side by setting
 ```{r }
 metabric |> ggplot() +
   geom_bar(aes(x = THREEGENE, fill = ER_IHC), position = "dodge") +
-  scale_y_continuous(limits = c(0, 700), breaks = seq(0, 700, 100), expand = expand_scale(mult = 0)) +
+  scale_y_continuous(limits = c(0, 700), breaks = seq(0, 700, 100), expand = expansion(mult = 0)) +
   scale_fill_manual(values = c("firebrick2", "dodgerblue2")) +
   labs(x = NULL, y = "samples", fill = "ER status") +
   theme_bw() +
